fixed the price container overflow

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -298,6 +298,7 @@ i{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
 }
 .product-bottom i{
   font-size: 28px;
