--- a/Styles/product-detail.css
+++ b/Styles/product-detail.css
@@ -111,7 +111,7 @@ body {
     height: 30px;
     border-radius: 50%;
     cursor: pointer;
-    border: 2px solid #e0e0e0;
+    border: 2px solid black;
     transition: all 0.3s ease;
     box-shadow: inset 0 0 4px rgba(0,0,0,0.1), 0 2px 4px rgba(0,0,0,0.1);
 }
